update travel time with better time
